--- a/index.css
+++ b/index.css
@@ -18,7 +18,23 @@ body {
 }
 
 .button {
+    display: inline-block;
+    padding: 6px 14px;
+    border: 1px solid #409eff;
+    text-align: center;
+    line-height: 1;
+    font-weight: 500;
+    font-size: 14px;
+    color: #fff;
+    background-color: #409eff;
+    border-radius: 4px;
+    outline: none;
     cursor: pointer;
+}
+
+.button:active {
+    background-color: #147fef;
+    border-color: #147fef;
 }
 
 #file {
